--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,16 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      Ionic 4 issue
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+    Click here to forward to next page
+    <ion-button routerLink="../forwarded">Go (routerLink)</ion-button>
+    <ion-button color="secondary" (click)="goOnRelative()">Go (with relative routing)</ion-button>
+    <ion-button color="tertiary" (click)="goOnAbsolute()">Go (with absolute routing)</ion-button>
   </div>
 </ion-content>
